--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p class="text1" id="time"></p>
             <p class="text1" id="weathe"></p>
             <p class="text1" id="hot"></p>
-            <p class="text1" id="condition"></p>
+            <p class="text1" id="conditoin"></p>
           </div>
         </div>
       </div>
