--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p class="text1" id="date"></p>
             <p class="text1" id="time"></p>
             <p class="text1" id="weathe"></p>
-            <p class="text1" id="hot"></p>
+            <!-- <p class="text1" id="hot"></p> -->
             <p class="text1" id="conditoin"></p>
           </div>
         </div>
